--- a/css/main.css
+++ b/css/main.css
@@ -29,3 +29,22 @@ nav
 {
     width:100%;
 }
+
+.card-header
+{
+    margin-bottom: 15px;
+    border: 1px solid rgba(0,0,0,.125);
+}
+
+#accordion .card
+{
+    border:none;
+}
+
+@media only screen and (max-width: 400px)
+{
+    .jumbotron h1
+    {
+        font-size: 2.5rem;
+    }
+}
